
feniceincludedir = $(top_srcdir)/include

noinst_LTLIBRARIES = liblight.la
liblight_la_SOURCES = array.c \
		      buffer.c \
		      stream.c \
		      configparser.c \
		      configparser.h \
		      proc_open.c \
		      proc_open.h \
		      configfile-glue.c \
		      configfile.c \
		      data_array.c \
		      data_count.c \
		      data_integer.c \
		      data_config.c \
		      data_string.c

INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
