
feniceincludedir = $(top_srcdir)/include

noinst_LIBRARIES = librtsp.a
librtsp_a_SOURCES =	RTSP_utils.c \
			RTSP_utils.h \
			RTSP_state_machine.c \
			RTSP_lowlevel.c \
			RTSP_setup.c \
			RTSP_play.c \
			RTSP_pause.c \
			RTSP_teardown.c \
			RTSP_options.c \
			RTSP_describe.c \
			RTSP_set_parameter.c

INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
