feniceincludedir =	$(includedir)/fenice
noinst_HEADERS	=	bufferpool.h \
			command_environment.h \
			multicast.h \
			debug.h
			evenloop.h \
			intnet.h \
			md5global.h \
			md5.h \
			mediainfo.h \
			pcm.h \
			mp3.h \
			gsm.h \
			mpeg4es.h \
			mpeg.h \
			mpeg_ts.h \
			mpeg_system.h \
			h26l.h \
			socket.h \
			prefs.h \
			rtcp.h \
			rtp.h \
			rtpptdefs.h \
			rtsp.h \
			schedule.h \
			sdp.h \
			types.h \
			utils.h \
			xmllexer.h \
			xmlparser.h 

INCLUDES = $(top_srcdir)
