feniceincludedir =	$(includedir)/fenice

noinst_HEADERS	=	bufferpool.h \
			command_environment.h \
			debug.h \
			demuxer.h \
			demuxer_module.h \
			evenloop.h \
			fnc_log.h \
			gsm.h \
			h26l.h \
			InputStream.h \
			intnet.h \
			md5global.h \
			md5.h \
			mediainfo.h \
			mediaparser.h \
			mediaparser_module.h \
			mediathread.h \
			mediautils.h \
			mp3.h \
			mpeg4es.h \
			mpeg.h \
			mpeg_system.h \
			mpeg_ts.h \
			multicast.h \
			pcm.h \
			prefs.h \
			rtcp.h \
			rtp_shm.h \
			rtp.h \
			rtpptdefs.h \
			rtsp.h \
			safe-ctype.h \
			schedule.h \
			sdp_grammar.h \
			sdp.h \
			socket.h \
			stunserver.h \
			types.h \
			utils.h \
			wsocket.h \
			xmllexer.h \
			xmlparser.h 

INCLUDES = $(top_srcdir)
