
feniceincludedir = $(top_srcdir)/include

noinst_LIBRARIES = liblight.a
liblight_a_SOURCES = array.c \
		     array.h \
		     buffer.c \
		     buffer.h \
		     stream.c \
		     stream.h \
		     configparser.c \
		     configparser.h \
		     proc_open.c \
		     proc_open.h \
		     configfile-glue.c \
		     configfile.c \
		     configfile.h \
		     data_array.c \
		     data_count.c \
		     data_integer.c \
		     data_config.c \
		     data_string.c \
		     settings.h

INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)/src
