feniceincludedir = $(top_srcdir)/include
INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)/src

noinst_LIBRARIES = libnetwork.a

libnetwork_a_SOURCES = \
		rtcp.h \
		rtcp_handler.c \
		rtcp_recv_packet.c \
		rtcp_send_packet.c \
		rtp.h \
		rtpptdefs.h \
		rtp_port.c \
		rtp_transport.c \
		rtsp.h \
		rtsp_describe.c \
		rtsp_lowlevel.c \
		rtsp_options.c \
		rtsp_pause.c \
		rtsp_play.c \
		rtsp_set_parameter.c \
		rtsp_setup.c \
		rtsp_state_machine.c \
		rtsp_teardown.c \
		rtsp_utils.c \
		rtsp_utils.h \
		sdp2.h \
		sdp_session_descr.c
